--- a/configs/config/debugging/pretrain/barlow_twins/barlow_twins_1node_resnet_imagenette_160.yaml
+++ b/configs/config/debugging/pretrain/barlow_twins/barlow_twins_1node_resnet_imagenette_160.yaml
@@ -58,15 +58,13 @@ config:
   METERS:
     name: ""
   MODEL:
-    TRUNK:
-      NAME: resnet
-      TRUNK_PARAMS:
-        RESNETS:
-          DEPTH: 50
+    NAME: resnet
+    RESNETS:
+      DEPTH: 50
     HEAD:
       PARAMS: [
-        ["mlp", {"dims": [2048, 8192], "use_relu": True, "use_bn": True, "use_bias": False}],
-        ["mlp", {"dims": [8192, 8192], "use_relu": True, "use_bn": True, "use_bias": False}],
+        ["mlp", {"dims": [2048, 8192], "use_relu": True, "use_bn": True, "use_bias": False, "skip_last_layer_relu_bn": False}],
+        ["mlp", {"dims": [8192, 8192], "use_relu": True, "use_bn": True, "use_bias": False, "skip_last_layer_relu_bn": False}],
         ["mlp", {"dims": [8192, 8192], "use_bias": False}],
       ]
     SYNC_BN_CONFIG:
