--- a/configs/config/test/integration_test/quick_barlow_twins.yaml
+++ b/configs/config/test/integration_test/quick_barlow_twins.yaml
@@ -54,16 +54,13 @@ config:
   METERS:
     name: ""
   MODEL:
-    TRUNK:
-      NAME: resnet
-      TRUNK_PARAMS:
-        RESNETS:
-          DEPTH: 50
+    NAME: resnet
+    RESNETS:
+      DEPTH: 50
     HEAD:
       # Reduced MLP size to limit memory footprint
       PARAMS: [
-        ["mlp", {"dims": [2048, 128], "use_relu": True, "use_bn": True, "use_bias": False}],
-        ["mlp", {"dims": [128, 128], "use_bias": False}],
+        ["mlp", {"dims": [2048, 128], "use_relu": True, "use_bn": True, "use_bias": False, "skip_last_layer_relu_bn": False}],
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
