misunderstanding around TRUNK and TRUNK_PARAMS

--- a/configs/config/debugging/pretrain/barlow_twins/barlow_twins_1node_resnet_imagenette_160.yaml
+++ b/configs/config/debugging/pretrain/barlow_twins/barlow_twins_1node_resnet_imagenette_160.yaml
@@ -58,9 +58,10 @@ config:
   METERS:
     name: ""
   MODEL:
-    NAME: resnet
-    RESNETS:
-      DEPTH: 50
+    TRUNK:
+      NAME: resnet
+      RESNETS:
+        DEPTH: 50
     HEAD:
       PARAMS: [
         ["mlp", {"dims": [2048, 8192], "use_relu": True, "use_bn": True, "use_bias": False, "skip_last_layer_relu_bn": False}],
