default precision recall meters config

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -398,6 +398,30 @@ config:
       # names of the meter. Useful in cases where we have several meters. For the linear
       # feature evaluation workflows, meter name is automatically inferred.
       meter_names: []
+    # calculate top-k meter on single target multiple ouput setting
+    precision_list_meter:
+      # number of precision meters. In cases like linear evaluation of feature, we perform
+      # evaluation of several layers and there's a separate meter for each layer.
+      # num_meters basically specifices number of meters.
+      num_meters: 1
+      # what topk values to calculate. Example topk_values = [1, 5] means top1 and top5
+      # both will be calculated
+      topk_values: [1]
+      # names of the meter. Useful in cases where we have several meters. For the linear
+      # feature evaluation workflows, meter name is automatically inferred.
+      meter_names: []    
+    # calculate top-k meter on single target multiple ouput setting
+    recall_list_meter:
+      # number of recall meters. In cases like linear evaluation of feature, we perform
+      # evaluation of several layers and there's a separate meter for each layer.
+      # num_meters basically specifices number of meters.
+      num_meters: 1
+      # what topk values to calculate. Example topk_values = [1, 5] means top1 and top5
+      # both will be calculated
+      topk_values: [1]
+      # names of the meter. Useful in cases where we have several meters. For the linear
+      # feature evaluation workflows, meter name is automatically inferred.
+      meter_names: []
     # calculate mean average precion meter on single target multiple output.
     mean_ap_list_meter:
       # number of classes over which mean AP is being calculated. 9605 corresponds to
