--- a/configs/config/pretrain/byol/byol_1gpu.yaml
+++ b/configs/config/pretrain/byol/byol_1gpu.yaml
@@ -65,9 +65,7 @@ config:
     HEAD:
       PARAMS: [
         ["mlp", {"dims": [2048, 4096], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [4096, 256]}],
-        ["mlp", {"dims": [256, 4096], "use_relu": True, "use_bn": True}],
-        ["mlp", {"dims": [4096, 256]}],
+        ["mlp", {"dims": [4096, 256]}]
       ]
     SYNC_BN_CONFIG:
       CONVERT_BN_TO_SYNC_BN: True
@@ -90,10 +88,17 @@ config:
       regularize_bias: False
       param_schedulers:
         lr:
-          name: cosine
-          start_value: 0.05   # LR for batch size 64
-          end_value: 0.000001
+          name: composite
+          schedulers:
+            - name: linear
+              start_value: 0.000001
+              end_value: 0.2
+            - name: cosine
+              start_value: 0.2
+              end_value: 0.000001
+          interval_scaling: [rescaled, fixed]
           update_interval: epoch
+          lengths: [.0334, 0.9666]     
   DISTRIBUTED:
     BACKEND: nccl
     NUM_NODES: 1
