--- a/configs/config/benchmark/linear_image_classification/imagenet1k/byol_transfer_in1k_linear.yaml
+++ b/configs/config/benchmark/linear_image_classification/imagenet1k/byol_transfer_in1k_linear.yaml
@@ -1,4 +1,6 @@
 # @package _global_
+# BYOL:Bootstrap Your Own Latent - https://arxiv.org/abs/2006.07733
+# Configuration based on BYOL paper - Appendix C -- C.1
 config:
   VERBOSE: True
   LOG_FREQUENCY: 200
