added option to register custom modules

--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -450,6 +450,8 @@ config:
   # MODEL
   # ----------------------------------------------------------------------------------- #
   MODEL:
+    # default model. User can define their own model and use that instead.
+    NAME: "multi_input_output_model"
     # sometimes we can avoid CUDA OOM issues by clearing out the cache. Clearing out cache
     # is slow so chose wisely.
     CUDA_CACHE:
