--- a/vissl/config/defaults.yaml
+++ b/vissl/config/defaults.yaml
@@ -784,8 +784,8 @@ config:
     # ----------------------------------------------------------------------------------- #
     AMP_PARAMS:
       USE_AMP: False
-      # Use O1 as it is robust and stable than O3. If you want to use O3, we recommend
-      # the following setting:
+      # Only applicable for Apex AMP_TYPE.
+      # Use O1 as it is robust and stable than O3. If you want to use O3, we recommend the following setting:
       # {"opt_level": "O3", "keep_batchnorm_fp32": True, "master_weights": True, "loss_scale": "dynamic"}
       AMP_ARGS: {"opt_level": "O1"}
       # we support pytorch amp as well which is availale in pytorch>=1.6.
