--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 # Keep this sorted for easy search.
 # Keep versions pinned for testing reproducibility.
-cython==0.29.22
-fvcore==0.1.3.post20210317
-iopath==0.1.9
-hydra-core==1.0.7
-numpy==1.19.5
-parameterized==0.7.4
-scikit-learn==0.24.1
-submitit==1.3.3
-tabulate==0.8.9
-timm==0.6.11
-pandas
+cython==0.29.33
+fvcore==0.1.5.post20221221
+iopath==0.1.10
+hydra-core==1.3.2
+numpy==1.23.5
+parameterized==0.8.1
+scikit-learn==1.2.1
+submitit==1.4.5
+tabulate==0.9.0
+timm==0.6.12
+pandas==1.5.3
